Fix alignment

--- a/style.css
+++ b/style.css
@@ -107,12 +107,13 @@ header {
   margin: 0;
   display: flex;
   flex-direction: column;
-  padding: 7% 7%;
+  padding: 6% 6%;
   background: url('./images/header-shapes-mobile.svg') 0 50px no-repeat;
   background-size: 100% auto;
   height: 660px;
   border-bottom-left-radius: 10% 10%;
   background-color: #fff;
+  width: 100%;
 }
 
 .intro > h1 {
@@ -124,6 +125,7 @@ header {
   margin-top: 1.1em;
   margin-bottom: 0.2em;
   font-weight: 700px;
+  white-space: nowrap;
 }
 
 .intro > h2 {
@@ -131,6 +133,7 @@ header {
   font-family: Poppins-extrabold, sans-serif;
   margin-top: 0.3em;
   margin-bottom: 0.32em;
+  white-space: nowrap;
 }
 
 .intro > p {
@@ -153,17 +156,18 @@ header {
 div {
   overflow: hidden;
   padding: 0;
+  margin: 0;
 }
 
 .section1 > div {
   border: 1px solid #dfe1e6;
   border-radius: 15px;
-  margin-top: 18%;
+  margin-top: 13%;
   padding-left: 4%;
   padding-top: 4%;
   padding-right: 4%;
   margin-left: 6%;
-  margin-right: 4%;
+  margin-right: 6%;
   padding-bottom: 10%;
   background-color: white;
 }
@@ -496,10 +500,10 @@ textarea {
 
 .call-to-action-contact {
   text-align: left;
-  margin-left: 5%;
+  margin-left: 6%;
 }
 
-#switch {
+#humbuger {
   display: block;
   position: fixed;
   top: 1rem;
@@ -519,21 +523,36 @@ textarea {
   white-space: nowrap;
 }
 
+.imgdesk1,
+.imgdesk2,
+.imgdesk3,
+.imgdesk4 {
+  display: none;
+}
+
+.imgmob1 {
+  display: block;
+}
+
 @media (min-width: 768px) {
-  #switch {
+  #humbuger {
     display: none;
+  }
+
+  .call-to-action-contact {
+    text-align: center;
+    margin-left: 6%;
   }
 
   .nav-container {
     display: flex;
     flex-direction: row;
-    width: 50%;
+    width: auto;
   }
 
   .nav-menu {
     display: flex;
     flex-direction: row;
-    width: 100%;
     justify-content: end;
   }
 
@@ -616,6 +635,7 @@ textarea {
     font-weight: 700;
     font-family: Poppins-semibold, sans-serif;
     font-size: 1.125em;
+    width: auto;
 
     /* Primary/B400 */
     color: #6070ff;
@@ -763,6 +783,20 @@ textarea {
     width: fit-content;
     white-space: nowrap;
     font-weight: bold;
+  }
+
+  .imgdesk1,
+  .imgdesk2,
+  .imgdesk3,
+  .imgdesk4 {
+    display: block;
+  }
+
+  .imgmob1,
+  .imgmob2,
+  .imgmob3,
+  .imgmob4 {
+    display: none;
   }
 
   form {
